--- a/my-app/src/components/Sidebar/Sidebar.css
+++ b/my-app/src/components/Sidebar/Sidebar.css
@@ -64,15 +64,18 @@ hr {
   display: none;
 }
 .small-sidebar hr {
-  width: 50%;
+  width: 30%;
   margin-bottom: 25px;
 }
 .side-link.active img {
   padding-bottom: 2px;
   border-bottom: 3px solid red;
 }
-@media (max-width:900px) {
-  .sidebar{
+@media (max-width: 720px) {
+  .sidebar p {
     display: none;
+  }
+  .sidebar {
+    position: absolute;
   }
 }
